--- a/UI/Web/src/theme/components/_offcanvas.scss
+++ b/UI/Web/src/theme/components/_offcanvas.scss
@@ -7,3 +7,6 @@
     top: 56px;
 }
 
+.offcanvas-bottom {
+    height: 40vh;
+}
